<resources>
    <string name="parseId">8H90I8DD1HC7bC1DSTZ0A3Hx8R9IvjpfYfnMFAaD</string>
    <string name="parseKey">jgFlObtthO7RJEqIFa7oeM87prVKyleiNche125E</string>
    <string name="app_name">ProyectoPMUL02</string>
    <string name="menuLogin">Iniciar sesion</string>
    <string name="addExtra">Añadir extra</string>
    <string name="addLocal">Añadir local</string>
    <string name="addCamarero">Añadir camarero</string>
    <string name="addCocina">Añadir cocina</string>
    <string name="localAddress">Direccion local</string>
    <string name="localName">Nombre local</string>
    <string name="cancel">Cancelar</string>
    <string name="addData">Añadir datos</string>
    <string name="viewData">Visualizar datos</string>
    <string name="perfil">Perfil</string>
    <string name="active">Activo</string>
    <string name="camareroName">Nombre camarero</string>
    <string name="cocinaName">Nombre cocina</string>
    <string name="unactive">Desactivo</string>
    <string name="viewLocales">Ver locales</string>
    <string name="viewCamareros">Ver camareros</string>
    <string name="viewCocinas">Ver cocinas</string>
    <string name="local">Local</string>
    <string name="chooseLocal">Elige local</string>
    <string name="cobrado">Cobrado</string>
    <string name="duracion">Duracion</string>
    <string name="pagoAsociado">Pago asociado</string>
    <string name="finalizar">Finalizar</string>
    <string name="cocina">Cocina</string>
    <string name="festividad">Festividad</string>
    <string name="facebook_app_id">1746225058938823</string>
    <string name="dia">Dia</string>
    <string name="noche">Noche</string>
    <string name="camareros">Camareros</string>
    <string name="zero">0</string>
    <string name="viewExtras">Ver extras</string>

</resources>
