<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:focusable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonPerfilOnClick"
            android:text="@string/perfil" />

        <Button
            android:id="@+id/buttonAddData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonAddDataOnClick"

            android:text="@string/addData" />

        <Button
            android:id="@+id/buttonViewDAta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonViewDataOnClick"
            android:text="@string/viewData" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewFacebookInfo"/>
    </LinearLayout>

</RelativeLayout>
